--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "bot",
-  "version": "1.0.0",
+  "name": "eaterybot",
+  "version": "1.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "bot.js",
   "dependencies": {
     "dotenv": "^8.2.0",
     "mysql2": "^2.1.0",
@@ -12,6 +12,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "trefis",
   "license": "ISC"
 }
