--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "eaterybot",
-  "version": "1.1.1",
+  "version": "1.0",
   "description": "",
   "main": "bot.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "mysql2": "^2.2.5",
     "node-vk-bot-api": "^3.3.7",
     "sequelize": "^6.3.5"
