--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "imgur-uploader": "^4.2.1",
     "mysql2": "^2.2.5",
     "node-vk-bot-api": "^3.3.7",
+    "qr-image": "^3.2.0",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {},
