--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.17.1",
     "imgur-uploader": "^4.2.1",
     "mysql2": "^2.2.5",
+    "node-cron": "^2.0.3",
     "node-vk-bot-api": "^3.3.7",
     "qr-image": "^3.2.0",
     "sequelize": "^6.3.5"
