--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eaterybot",
   "version": "1.0.0",
-  "description": "",
+  "description": "Eatery Bot node-vk-bot-api",
   "main": "bot.js",
   "dependencies": {
     "dotenv": "^8.2.0",
@@ -9,9 +9,9 @@
     "imgur-uploader": "^4.2.1",
     "mysql2": "^2.2.5",
     "node-cron": "^2.0.3",
-    "node-vk-bot-api": "^3.3.7",
+    "node-vk-bot-api": "^3.4.0",
     "qr-image": "^3.2.0",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.6.1"
   },
   "devDependencies": {},
   "scripts": {
@@ -19,5 +19,5 @@
     "start": "node bot.js"
   },
   "author": "trefis",
-  "license": "ISC"
+  "license": "MIT"
 }
